2nd Last Update (BIG)
1. Collision Manager / AABB
- Fixed collision issues with platforms and player
- Added bounding walls to prevent player from walking out of map

2. Physics2D
- Balanced falling physics for player, platform and coin

3. Coin / Platforms
- Added Randomised Spawner Algorithm for both objects.
- Added life time to handle auto-destruction.

4. Player Input Controller
- Fixed issues with detecting multi-finger input.
- Buttons now react more responsive to player.

5.  Audio Manager
- Audio Manager is now a Singleton Class.
- Vibration is now working even in older platforms.
- Audio Manager can now be played even outside Game Scenes.
- More Error checking on development part.
- Added Resume, Pause and Stop functionality.

6. New Save System and Settings (Singleton)
- Score is now saved and displayed at game over.
- Audio Settings implemented to adjust volume within application.

7. UI Pages & Layouts
- Added Game Over Page
- Added Audio Settings Page
- Added Help Page
- App now launch with custom splash art and has unique icon.
- App name now displays as Trashio on Phone.

8. Optimization & Crash Fixes
- Fixed issues regarding media player memory leak.
- Fixed Game Scene properly destroying game objects on exit.
- All Game Scene Entry and Exit points now properly perform their create and destroy functions.
- Cleaned up most of the codebase.

(I finally understood how Android Studio and this framework works :OO)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,17 @@
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
 
+        <activity android:name=".main.pages.Settings"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
         <activity android:name=".mgp2d.mgp2d.core.GameActivity"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
+        <activity android:name=".main.pages.GameoverPage"
             android:screenOrientation ="sensorPortrait"
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
