--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
 
+        <activity android:name=".main.pages.ShopPage"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
         <activity android:name=".mgp2d.mgp2d.core.GameActivity"
             android:screenOrientation ="sensorPortrait"
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
