--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,29 @@
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
 
+        <activity android:name=".main.pages.Settings"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
+        <activity android:name=".main.pages.OtherPage"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
         <activity android:name=".main.pages.HelpPage"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
+
+
+        <activity android:name=".main.pages.InventoryPage"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
+        <activity android:name=".main.pages.ShopPage"
             android:screenOrientation ="sensorPortrait"
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
@@ -31,15 +53,7 @@
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
 
-        <activity android:name=".main.pages.Settings"
-            android:screenOrientation ="sensorPortrait"
-            tools:ignore="DiscouragedApi,LockedOrientationActivity">
-        </activity>
 
-        <activity android:name=".main.pages.ShopPage"
-            android:screenOrientation ="sensorPortrait"
-            tools:ignore="DiscouragedApi,LockedOrientationActivity">
-        </activity>
 
         <activity android:name=".mgp2d.mgp2d.core.GameActivity"
             android:screenOrientation ="sensorPortrait"
