--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,11 @@
             tools:ignore="DiscouragedApi,LockedOrientationActivity">
         </activity>
 
+        <activity android:name=".main.pages.ProfilePage"
+            android:screenOrientation ="sensorPortrait"
+            tools:ignore="DiscouragedApi,LockedOrientationActivity">
+        </activity>
+
 
 
         <activity android:name=".mgp2d.mgp2d.core.GameActivity"
